--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 				<version>${swagger2.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.16</version>
+			</dependency>
+
 		</dependencies>
 
 
