--- a/retail-biz/pom.xml
+++ b/retail-biz/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>spring-cloud-openfeign-core</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
