--- a/retail-process/pom.xml
+++ b/retail-process/pom.xml
@@ -116,6 +116,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>-->
 
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.github.openfeign.form</groupId>
+            <artifactId>feign-form-spring</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
