--- a/retail-consul/src/main/resources/env/development/bootstrap.yml
+++ b/retail-consul/src/main/resources/env/development/bootstrap.yml
@@ -8,10 +8,17 @@ spring:
       port: 8500
       #enabled将此值设置为“false”禁用Consul配置
       config:
-        enabled: true   #默认是true --
-        format: YAML    # 表示consul上面文件的格式 有四种 YAML PROPERTIES KEY-VALUE FILES
-        data-key: data    #表示consul上面的KEY值(或者说文件的名字) 默认是data
+        #默认是true
+        enabled: true
+        # 表示consul上面文件的格式 有四种 YAML PROPERTIES KEY-VALUE FILES
+        format: YAML
+        #设置配置所在目录
+        prefix: config
+        #表示consul上面的KEY值(或者说文件的名字) 默认是data
+        data-key: data
         # watch选项为配置监视功能，主要监视配置的改变
+        profile-separator: ','
+        default-context: consul-service
         watch:
           enabled: true
           delay: 10000
