--- a/retail-gateway/src/main/resources/env/development/application-development-tpl.yml
+++ b/retail-gateway/src/main/resources/env/development/application-development-tpl.yml
@@ -50,6 +50,12 @@ spring:
             - Path=/retail/retail-biz/**
           filters:
             - StripPrefix=1
+        - id: oauth-service
+            uri: lb://oauth-service
+            predicates:
+              - Path=/retail/retail-oauth/**
+            filters:
+              - StripPrefix=1
     loadbalancer:
       retry:
         enabled: false
