--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
 		<druid.version>1.2.1</druid.version>
 		<jwt.version>0.9.1</jwt.version>
 		<retail.version>0.0.1-SNAPSHOT</retail.version>
+		<mybatis.spring.version>2.1.3</mybatis.spring.version>
+		<druid.spring.version>1.2.4</druid.spring.version>
 	</properties>
 
 
@@ -99,6 +101,18 @@
 				<groupId>com.voyageone</groupId>
 				<artifactId>retail-common</artifactId>
 				<version>${retail.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.mybatis.spring.boot</groupId>
+				<artifactId>mybatis-spring-boot-starter</artifactId>
+				<version>${mybatis.spring.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.alibaba</groupId>
+				<artifactId>druid-spring-boot-starter</artifactId>
+				<version>${druid.spring.version}</version>
 			</dependency>
 
 
