--- a/retail-oauth/pom.xml
+++ b/retail-oauth/pom.xml
@@ -84,6 +84,11 @@
             <artifactId>spring-boot</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+
 
     </dependencies>
 
