--- a/retail-biz/pom.xml
+++ b/retail-biz/pom.xml
@@ -73,6 +73,14 @@
             <artifactId>feign-form-spring</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>hmily-spring-boot-starter-springcloud</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
