--- a/retail-process/pom.xml
+++ b/retail-process/pom.xml
@@ -131,6 +131,16 @@
             <artifactId>feign-form-spring</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.dromara</groupId>
+            <artifactId>hmily-spring-boot-starter-springcloud</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
     </dependencies>
 
     <profiles>
