hmily tcc config

--- a/retail-common/src/main/resources/dao-config.properties
+++ b/retail-common/src/main/resources/dao-config.properties
@@ -2,25 +2,25 @@
 drive.class.path=/Users/jonas/Desktop/hs-common-parent/hs-dao-generator/src/main/resources/mysql-connector-java-5.1.30.jar
 # 数据库连接参数
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://10.0.0.132:3306/retail_oauth?useUnicode=true&characterEncoding=utf-8
+jdbc.url=jdbc:mysql://localhost:3316/retail_biz?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
 jdbc.username=root
-jdbc.password=Hua_!23shang
+jdbc.password=
 # rootClass配置
-model.rootClass=com.voyageone.retail.oauth.model.bean.PriceParentBaseSimpleModel
+model.rootClass=com.voyageone.retail.biz.process.model.BaseModel
 #model.partitionInterface=com.voyageone.hs.base.dao.Partitioned
-dao.rootInterface=com.voyageone.retail.oauth.model.bean.BaseMySqlDao
+#dao.rootInterface=com.voyageone.retail.oauth.model.bean.BaseMySqlDao
 #dao.partitionRootInterface=com.voyageone.hs.common.base.dao.mysql.BasePMySqlDao
 dao.methodGenerate=false
 #xml.mapper.partitionTableNameAppend=${partition}
 #xml.mapper.partitionTableNamePrefix=model.
 # 包路径配置
-model.package=com.voyageone.retail.oauth.model
-model.project=retail-oauth/src/main/java/
+model.package=com.voyageone.retail.biz.process.model
+model.project=retail-biz/src/main/java/
 # dao配置
-dao.package=com.voyageone.retail.oauth.dao
-dao.project=retail-oauth/src/main/java/
-xml.mapper.project=retail-oauth/src/main/resources/
-xml.mapper.package=com.voyageone.retail.oauth.dao.mybatis.mappers
+dao.package=com.voyageone.retail.biz.process.dao
+dao.project=retail-biz/src/main/java/
+xml.mapper.project=retail-biz/src/main/resources/
+xml.mapper.package=com.voyageone.retail.biz.process.dao.mybatis.mappers
 # 生成方法设置
 table.delimitAllColumns=true
 table.enableCountByExample=false
