--- a/retail-biz/src/main/resources/env/development/application-development-tpl.yml
+++ b/retail-biz/src/main/resources/env/development/application-development-tpl.yml
@@ -17,3 +17,22 @@ spring:
     test-while-idle: true
     time-between-eviction-runs-millis: 18800
     jdbc-interceptors: ConnectionState;SlowQueryReport(threshold=60000)
+
+retail-biz:
+  datasource:
+    master:
+      url: jdbc:mysql://localhost:3316/db?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+      username: root
+      password:
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      configuration:
+        cache-prep-stmts: true
+        prep-stmt-cache-size: 250
+        prep-stmt-cache-sql-limit: 2048
+        use-server-prep-stmts: true
+        use-local-session-state: true
+        rewrite-batched-statements: true
+        cache-result-set-metadata: true
+        cache-server-configuration: true
+        elide-set-auto-commits: true
+        maintain-time-stats: false
